ME6110: outline early commit

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -36,21 +36,39 @@ h3{
 <body bgcolor = "black">
 
 <center> <h1> ME6110: Combustion Technology <br>
-Jan-May 2019 <br>
-<i>Under construction</i> </h1>
+Jan-May 2019 <br></h1>
 
-<table border="1" cellspacing="5" cellpadding="5" width="100%">
+<table border="1" cellspacing="1" cellpadding="1" width="100%">
 	<td width="100%">
 	<center>
-		<h2><a href="https://owncloud.iitm.ac.in/index.php/f/03456428" target="_blank">Course contents</a></h2> 
+<!--		<h2><a href="https://owncloud.iitm.ac.in/index.php/f/03456428" target="_blank">Course contents</a></h2> -->
 <h2> Instructor office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </h2></center> <br>
 </center>
 	</td>
 </table>
 
-<table border="1" cellspacing="5" cellpadding="5" width="100%">
+<table border="1" cellspacing="1" cellpadding="1" width="100%">
 <tr>
 <td width="50%">
+
+<h2> Course outline (subject to change)</h2>
+Module 1: Premixed flames, with bunsen burner as an example (6 lectures)
+<ul> 
+	<li> Notion of flame speed, global energy balance to derive relations between flame speed, stoichiometry, thermochemistry and kinetics. </li>
+	<li> Dependence of SL on various parameters </li>
+	<li> 1D conservation laws for steady laminar premixed flames </li>
+	<li> Flame speed calculations </li>
+	<li> Flammability, Quenching, and ignition </li>
+	<li> Turbulent premixed flames </li>
+</ul>
+Module 2: Non-premixed flames, with counterflow diffusion flame as an example (6 lectures)
+<ul> </ul>
+Module 3: Burners for gaseous fuels (9 lectures)
+<ul> </ul>
+Module 4: Spray combustion and applications (9 lectures)
+<ul> </ul>
+Module 5: Solid fuel combustion (9 lectures)
+<ul> </ul>
 
 <!-- ><h2> Lecture summary </h2>
 <ul><li>	 	
