adding some trivial details on ms admission

--- a/project_writeup/MS_PhD_Winter_2018.html
+++ b/project_writeup/MS_PhD_Winter_2018.html
@@ -48,6 +48,9 @@ Penchant for writing stand-alone codes, working knowledge in C++ (inclusive of p
 <!-- http://www.tandfonline.com/doi/abs/10.1080/13647830802245177 -->
 
 The applicant must be GATE qualified, and must be selected by the MS admission process at IIT Madras.
+
+Feel free to drop by my office (TDCE 203) or send me an email at krithika@iitm.ac.in to learn more details. 
+
   </tr>
   </table>
   
