adding some trivial details on ms admission

--- a/project_writeup/MS_PhD_Winter_2018.html
+++ b/project_writeup/MS_PhD_Winter_2018.html
@@ -49,8 +49,9 @@ Penchant for writing stand-alone codes, working knowledge in C++ (inclusive of p
 
 The applicant must be GATE qualified, and must be selected by the MS admission process at IIT Madras.
 
-<br>
-Feel free to drop by my office (TDCE 203) or send me an email at krithika@iitm.ac.in to learn more details. 
+<br><br>
+
+<h4><i>Feel free to drop by my office (TDCE 203) or send me an email at krithika@iitm.ac.in to learn more details.</i></h4>
 
   </tr>
   </table>
