--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -12,14 +12,18 @@ A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: lightblue;}
-h3  {color: pink;}
+h2   {color: lightpink;}
+h3  {color: powderblue;}
 }
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid white;
+}
+h2{
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 h3{
-  margin-bottom: 0px;
+  margin-bottom: 4px;
 }
 </style>
 <script>
@@ -37,38 +41,48 @@ h3{
 
 <center> <h1> ME6110: Combustion Technology <br>
 Jan-May 2019 <br></h1>
-
-<table border="1" cellspacing="1" cellpadding="1" width="100%">
-	<td width="100%">
-	<center>
-<!--		<h2><a href="https://owncloud.iitm.ac.in/index.php/f/03456428" target="_blank">Course contents</a></h2> -->
 <h2> Instructor office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </h2></center> <br>
-</center>
-	</td>
+
+<table border="1" cellspacing="2" cellpadding="2"  width="100%">
+	<col width = "73%">
+	<col width = "27%">	
+	<tr> <th> <h2> Course outline (subject to change)</h2>
+		 <th> <h2> Reading </h2>
+	</tr> 
 </table>
 
-<table border="1" cellspacing="1" cellpadding="1" width="100%">
-<tr>
-<td width="50%">
+<h3>Module 1: Premixed flames, with bunsen burner as an example (6 lectures)</h3>
 
-<h2> Course outline (subject to change)</h2>
-Module 1: Premixed flames, with bunsen burner as an example (6 lectures)
-<ul> 
-	<li> Notion of flame speed, global energy balance to derive relations between flame speed, stoichiometry, thermochemistry and kinetics. </li>
-	<li> Dependence of SL on various parameters </li>
-	<li> 1D conservation laws for steady laminar premixed flames </li>
-	<li> Flame speed calculations </li>
-	<li> Flammability, Quenching, and ignition </li>
-	<li> Turbulent premixed flames </li>
-</ul>
-Module 2: Non-premixed flames, with counterflow diffusion flame as an example (6 lectures)
-<ul> </ul>
-Module 3: Burners for gaseous fuels (9 lectures)
-<ul> </ul>
-Module 4: Spray combustion and applications (9 lectures)
-<ul> </ul>
-Module 5: Solid fuel combustion (9 lectures)
-<ul> </ul>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "73%">
+	<col width = "27%">	
+   <tr> 
+	<td> Notion of flame speed, global energy balance to derive relations between flame speed, thermochemistry and kinetics </td>
+	<td> Reading ... </td> </tr>
+	
+	<tr> <td> Dependence of SL on various parameters </td>
+	<td> Reading ... </td></tr>
+	
+	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
+	<td> Reading ... </td></tr>
+	
+	<tr> <td> Flame speed calculations  </td>
+	<td> Reading ... </td></tr>
+	
+	<tr> <td> Flammability, Quenching, and ignition  </td>
+	<td> Reading ... </td></tr>
+	
+	<tr> <td> Turbulent premixed flames  </td>
+	<td> Reading ... </td></tr>
+</table>
+
+<h3> Module 2: Non-premixed flames, with counterflow diffusion flame as an example (6 lectures) </h3>
+
+<h3> Module 3: Burners for gaseous fuels (9 lectures) </h3>
+
+<h3> Module 4: Spray combustion and applications (9 lectures) </h3>
+
+<h3> Module 5: Solid fuel combustion (9 lectures) </h3>
 
 <!-- ><h2> Lecture summary </h2>
 <ul><li>	 	
