--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -23,7 +23,13 @@ h2{
   margin-bottom: 4px;
 }
 h3{
+    margin-top: 4px;
   margin-bottom: 4px;
+}
+p
+{
+  margin:0;
+  padding:0;
 }
 </style>
 <script>
@@ -39,17 +45,71 @@ h3{
 
 <body bgcolor = "black">
 
-<center> <h1> ME6110: Combustion Technology <br>
-Jan-May 2019 <br></h1>
-<h2> Instructor office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </h2></center> <br>
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td><center> <h1> ME6110: Combustion Technology <br>
+Jan-May 2019 </center ></h1><td> </tr>
 
+<tr><td>
+<h2> Instructors: </h2>
+<ul> <li> Dr. Krithika Narayanaswamy <br>
+# 203, Thermodynamics and Combustion Engineering Lab, email: krithika@iitm.ac.in </li>
+<li> Dr. S. Varunkumar <br>
+# 206B, Thermodynamics and Combustion Engineering Lab, email: varuns@iitm.ac.in </li>
+<li> Office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li>
+</ul> 
+</td></tr>
+
+<tr><td> <h2> Learning Outcomes: </h2>
+<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
+	 <li> Ability to design and analyse a combustion device. </li>
+</ul>
+</td></tr>
+	
+<tr><td>
+<h2> General information: </h2>
+<ul> <li> 9 credit course </li>
+     <li> Elective, open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li>
+     <li> 3 lecture hours per week: E slot <br>
+		 <p><font color="lightgreen">Mondays 1-1:50 PM, Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM</font></p></li>
+	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li>
+	  <li> <p><font color="lightgreen"><i>Venue:</i> TDCE seminar hall</font></p></li>
+      <li> Announcements via group mailing list</li>
+</ul>
+</td></tr>
+
+<tr><td>
+	<h2> Pre-requisites: </h2>
+<ul> <li> ME6060: Fundamentals of Combustion </li>
+     <li> Consent of Teacher is required if no prior coursework on combustion has been done. </li>
+</ul>
+</td></tr>
+
+
+<tr><td>
+<h2> Suggested Textbooks: </h2>
+<ul> <li> An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill </li> 
+	<li> Principles of Combustion by Kenneth Kuo, John Wiley </li>
+    <li> Combustion by Irvin Glassman, Academic Press </li>
+    <li> Combustion Theory by F. A. Williams, ABP (FAW) </li>
+    <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM) </li>
+    <li> Combustion Physics by C. K. Law (CKL) </li>
+    <li> Fuels and Combustion, Smith and Stinson, McGraw Hill, New York, 1952 </li>
+    <li> Combustion and Gasification in Fluidized Beds, Taylor & Francis Group, LLC, 2006 </li>
+    <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
+	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
+</ul>
+</td></tr>
+
+</table>
+
+<br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
 	<col width = "73%">
 	<col width = "27%">	
 	<tr> <th> <h2> Course outline (subject to change)</h2>
 		 <th> <h2> Reading </h2>
 	</tr> 
-</table>
+</table><br>
 
 <h3>Module 1: Premixed flames, with bunsen burner as an example (6 lectures)</h3>
 
@@ -74,7 +134,7 @@ Jan-May 2019 <br></h1>
 	
 	<tr> <td> Turbulent premixed flames  </td>
 	<td> Reading ... </td></tr>
-</table>
+</table><br>
 
 <h3> Module 2: Non-premixed flames, with counterflow diffusion flame as an example (6 lectures) </h3>
 
