table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -56,6 +56,7 @@ Jan-May 2019 </center ></h1><td> </tr>
 <li> Dr. S. Varunkumar <br>
 # 206B, Thermodynamics and Combustion Engineering Lab, email: varuns@iitm.ac.in </li>
 <li> Office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li>
+<li> Teaching Assistants: Syed Mughees Ali, Shanmugasundaram D.
 </ul> 
 </td></tr>
 
