table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -18,6 +18,10 @@ h3  {color: powderblue;}
 table, th, td {
     border: 1px solid white;
 }
+h1{
+    margin-top: 4px;
+  margin-bottom: 4px;
+}
 h2{
   margin-top: 4px;
   margin-bottom: 4px;
@@ -45,48 +49,46 @@ p
 
 <body bgcolor = "black">
 
-<table border="1" cellspacing="1" cellpadding="1"  width="100%">
-<tr> <td><center> <h1> ME6110: Combustion Technology <br>
-Jan-May 2019 </center ></h1><td> </tr>
+<table border="0" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td><center> <h1> ME6110: Combustion Technology </td>
+<tr> <td><center> <h1> Jan-May 2019</h1> </center></td> </tr>
+</table>
 
-<tr><td>
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr><td width="50%">
 <h2> Instructors: </h2>
 <ul> <li> Dr. Krithika Narayanaswamy <br>
-# 203, Thermodynamics and Combustion Engineering Lab, email: krithika@iitm.ac.in </li>
+# 203, Thermodynamics and Combustion Engineering Lab<br>
+Email: krithika@iitm.ac.in </li><br>
 <li> Dr. S. Varunkumar <br>
-# 206B, Thermodynamics and Combustion Engineering Lab, email: varuns@iitm.ac.in </li>
-<li> Office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li>
+# 206B, Thermodynamics and Combustion Engineering Lab<br>
+Email: varuns@iitm.ac.in </li> <br>
+<li> Instructor office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li>
 <li> Teaching Assistants: Syed Mughees Ali, Shanmugasundaram D.
 </ul> 
-</td></tr>
 
-<tr><td> <h2> Learning Outcomes: </h2>
-<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
-	 <li> Ability to design and analyse a combustion device. </li>
-</ul>
-</td></tr>
-	
-<tr><td>
 <h2> General information: </h2>
 <ul> <li> 9 credit course </li>
      <li> Elective, open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li>
      <li> 3 lecture hours per week: E slot <br>
 		 <p><font color="lightgreen">Mondays 1-1:50 PM, Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM</font></p></li>
-	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li>
+	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
 	  <li> <p><font color="lightgreen"><i>Venue:</i> TDCE seminar hall</font></p></li>
       <li> Announcements via group mailing list</li>
 </ul>
-</td></tr>
 
-<tr><td>
+<h2> Learning Outcomes: </h2>
+<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
+	 <li> Ability to design and analyse a combustion device. </li>
+</ul>
+</td>
+
+<td width="50%"> 
 	<h2> Pre-requisites: </h2>
 <ul> <li> ME6060: Fundamentals of Combustion </li>
      <li> Consent of Teacher is required if no prior coursework on combustion has been done. </li>
 </ul>
-</td></tr>
 
-
-<tr><td>
 <h2> Suggested Textbooks: </h2>
 <ul> <li> An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill </li> 
 	<li> Principles of Combustion by Kenneth Kuo, John Wiley </li>
@@ -99,8 +101,8 @@ Jan-May 2019 </center ></h1><td> </tr>
     <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 </ul>
-</td></tr>
-
+</td>
+</tr>
 </table>
 
 <br><br>
