--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -62,9 +62,7 @@ p
 Email: krithika@iitm.ac.in </li><br>
 <li> Dr. S. Varunkumar <br>
 # 206B, Thermodynamics and Combustion Engineering Lab<br>
-Email: varuns@iitm.ac.in </li> <br>
-<li> Instructor office hours: Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li>
-<li> Teaching Assistants: Syed Mughees Ali, Shanmugasundaram D.
+Email: varuns@iitm.ac.in </li>
 </ul> 
 
 <h2> General information: </h2>
@@ -76,20 +74,37 @@ Email: varuns@iitm.ac.in </li> <br>
 	  <li> <p><font color="lightgreen"><i>Venue:</i> TDCE seminar hall</font></p></li>
       <li> Announcements via group mailing list</li>
 </ul>
-
-<h2> Learning Outcomes: </h2>
-<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
-	 <li> Ability to design and analyse a combustion device. </li>
-</ul>
 </td>
 
 <td width="50%"> 
+	<h2> Learning Outcomes: </h2>
+	<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
+		 <li> Ability to design and analyse a combustion device. </li>
+	</ul>
+	
 	<h2> Pre-requisites: </h2>
-<ul> <li> ME6060: Fundamentals of Combustion </li>
-     <li> Consent of Teacher is required if no prior coursework on combustion has been done. </li>
-</ul>
+	<ul> <li> ME6060: Fundamentals of Combustion </li>
+    	 <li> Consent of Teacher is required if no prior coursework on combustion has been done. </li>
+	</ul>
 
-<h2> Suggested Textbooks: </h2>
+	<h2> Grading policy: </h2>
+	<ul> <li> Mid-semester exam: 50%</li>
+		 <li> Final exam: 50%</li>
+	</ul>
+
+    <h2> Questions?</h2>
+	<ul>
+		<li> Instructor office hours: <br>
+			Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li><br>
+		<li> Teaching Assistants: <br>
+		 Syed Mughees Ali, Shanmugasundaram D.</li>
+	</ul>
+</td>
+</tr>
+</table>
+
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%"><h2> Suggested Textbooks: </h2>
 <ul> <li> An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill </li> 
 	<li> Principles of Combustion by Kenneth Kuo, John Wiley </li>
     <li> Combustion by Irvin Glassman, Academic Press </li>
@@ -101,9 +116,9 @@ Email: varuns@iitm.ac.in </li> <br>
     <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 </ul>
-</td>
 </tr>
 </table>
+
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
