table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -66,8 +66,8 @@ Email: varuns@iitm.ac.in </li>
 </ul> 
 
 <h2> General information: </h2>
-<ul> <li> 9 credit course </li>
-     <li> Elective, open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li>
+<ul> <li> 9 credit elective course </li>
+     <li> Open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li>
      <li> 3 lecture hours per week: E slot <br>
 		 <p><font color="lightgreen">Mondays 1-1:50 PM, Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM</font></p></li>
 	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
