table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -94,7 +94,7 @@ Email: varuns@iitm.ac.in </li>
 
     <h2> Questions?</h2>
 	<ul>
-		<li> Instructor office hours: <br>
+		<li> Instructors' office hours: <br>
 			Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li><br>
 		<li> Teaching Assistants: <br>
 		 Syed Mughees Ali, Shanmugasundaram D.</li>
