table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -67,11 +67,11 @@ Email: varuns@iitm.ac.in </li>
 
 <h2> General information: </h2>
 <ul> <li> 9 credit elective course </li>
-     <li> Open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li>
+     <li> Open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li><br>
      <li> 3 lecture hours per week: E slot <br>
 		 <p><font color="lightgreen">Mondays 1-1:50 PM, Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM</font></p></li>
 	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
-	  <li> <p><font color="lightgreen"><i>Venue:</i> TDCE seminar hall</font></p></li>
+	  <li> <p><font color="lightgreen">Venue: TDCE seminar hall</font></p></li>
       <li> Announcements via group mailing list</li>
 </ul>
 </td>
@@ -95,7 +95,7 @@ Email: varuns@iitm.ac.in </li>
     <h2> Questions?</h2>
 	<ul>
 		<li> Instructors' office hours: <br>
-			Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203, 206B </li><br>
+			Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> seminar hall </li><br>
 		<li> Teaching Assistants: <br>
 		 Syed Mughees Ali, Shanmugasundaram D.</li>
 	</ul>
@@ -124,43 +124,113 @@ Email: varuns@iitm.ac.in </li>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
 	<col width = "73%">
 	<col width = "27%">	
-	<tr> <th> <h2> Course outline (subject to change)</h2>
+	<tr> <th> <h2> Course outline</h2>
 		 <th> <h2> Reading </h2>
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example (6 lectures)</h3>
+<h3>Module 1: Premixed flames, with bunsen burner as an example</h3>
 
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "73%">
 	<col width = "27%">	
    <tr> 
 	<td> Notion of flame speed, global energy balance to derive relations between flame speed, thermochemistry and kinetics </td>
-	<td> Reading ... </td> </tr>
+	<td> FAW $5.1.2</td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
-	<td> Reading ... </td></tr>
+	<td> CKL $7.7 </td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
-	<td> Reading ... </td></tr>
+	<td> CKL $5.1/TP $2.3 </td></tr>
 	
-	<tr> <td> Flame speed calculations  </td>
-	<td> Reading ... </td></tr>
+	<tr> <td> Flame speed calculations using FlameMaster </td>
+	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=ju2N6Pgpfy2VyLv" target="_blank">PREMIX documentation</a> </td></tr>
 	
-	<tr> <td> Flammability, Quenching, and ignition  </td>
-	<td> Reading ... </td></tr>
+	<tr> <td> Flammability, Quenching, and ignition energy  </td>
+	<td> HSM 7.1, 7.2, 8.0 </td></tr>
 	
 	<tr> <td> Turbulent premixed flames  </td>
-	<td> Reading ... </td></tr>
+	<td> CKL $11.1, $11.2, $11.3 </td></tr>
 </table><br>
 
-<h3> Module 2: Non-premixed flames, with counterflow diffusion flame as an example (6 lectures) </h3>
+<h3> Module 2: Non-premixed flames, with counterflow diffusion flame as an example </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "73%">
+	<col width = "27%">	
+   <tr> 
+	<td> Using opp-diff burner as example, introduce counterflow non-premixed flames. </td>
+	<td> </td> </tr>
+	
+	<tr> <td> Governing equations in physical space, methodology for calculating opp-diff flame structure at different strain rates using FlameMaster. </td>
+	<td>  </td></tr>
+	
+	<tr> <td> Transformation of 1D conservation laws into mixture fraction space  </td>
+	<td> </td></tr>
+	
+	<tr> <td> Flamelet equation and the concept of scalar dissipation rate and its relation to reaction rates at different strain rates.   </td>
+	<td> </td></tr>
+		
+	<tr> <td> Turbulent non-premixed flames  </td>
+	<td>  </td></tr>
+</table><br>
 
-<h3> Module 3: Burners for gaseous fuels (9 lectures) </h3>
+<h3> Module 3: Burners for gaseous fuels </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "73%">
+	<col width = "27%">	
+   <tr> 
+	<td> Domestic LPG stove burner - design concepts </td>
+	<td> </td> </tr>
+	
+	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
+	<td>  </td></tr>
+	
+	<tr> <td> Stationary gas turbines - blow off criteria </td>
+	<td> </td></tr>
+	
+</table><br>
 
-<h3> Module 4: Spray combustion and applications (9 lectures) </h3>
+<h3> Module 4: Spray combustion and applications</h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "73%">
+	<col width = "27%">	
+   <tr> 
+	<td> Basics of atomization and types of injectors</td>
+	<td> </td> </tr>
+	
+	<tr> <td> Droplet combustion theory </td>
+	<td>  </td></tr>
+	
+	<tr> <td> Spray combustion: (i) Modifications to flamelet model to include droplets </td>
+	<td> </td></tr>
 
-<h3> Module 5: Solid fuel combustion (9 lectures) </h3>
+	<tr> <td> Spray combustion: (ii) Aerodynamics and stability of spray flames  </td>
+	<td> </td></tr>
+
+	<tr> <td> Spray combustion: (iii) Application in gas turbines and LP rockets  </td>
+	<td> </td></tr>
+	
+</table><br>
+
+<h3> Module 5: Solid fuel combustion </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "73%">
+	<col width = "27%">	
+   <tr> 
+	<td> Single particle combustion theory for coal and biomass</td>
+	<td> </td> </tr>
+	
+	<tr> <td> Combustion in pulverized coal burners</td>
+	<td>  </td></tr>
+	
+	<tr> <td> Combustion and gasification of coal in fluidized bed systems - design considerations </td>
+	<td> </td></tr>
+
+	<tr> <td> Flame propagation in packed beds and its application in design of moving grate furnaces</td>
+	<td> </td></tr>
+	
+</table><br>
 
 <!-- ><h2> Lecture summary </h2>
 <ul><li>	 	
