table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -88,7 +88,7 @@ Email: varuns@iitm.ac.in </li>
 	</ul>
 
 	<h2> Grading policy: </h2>
-	<ul> <li> Mid-semester exam: 50%</li>
+	<ul> <li> Mid-semester exam (March 1-4): 50%</li>
 		 <li> Final exam: 50%</li>
 	</ul>
 
@@ -186,7 +186,7 @@ Email: varuns@iitm.ac.in </li>
 	<tr> <td> MILD combustion - Theory of extinction of well-stirred reactors  </td>
 	<td>  </td></tr>
 	
-	<tr> <td> Stationary gas turbines - blow off criteria </td>
+	<tr> <td> Stationary gas turbines - Blow off criteria, design criteria </td>
 	<td> </td></tr>
 	
 </table><br>
