table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -88,7 +88,7 @@ Email: varuns@iitm.ac.in </li>
 	</ul>
 
 	<h2> Grading policy: </h2>
-	<ul> <li> Mid-semester exam (March 1-4): 50%</li>
+	<ul> <li> Mid-semester exam (March 1--4): 50%</li>
 		 <li> Final exam: 50%</li>
 	</ul>
 
