table format course contents

--- a/teaching/ME6110_Jan_May_2019.html
+++ b/teaching/ME6110_Jan_May_2019.html
@@ -105,16 +105,17 @@ Email: varuns@iitm.ac.in </li>
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h2> Suggested Textbooks: </h2>
-<ul> <li> An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill </li> 
-	<li> Principles of Combustion by Kenneth Kuo, John Wiley </li>
-    <li> Combustion by Irvin Glassman, Academic Press </li>
-    <li> Combustion Theory by F. A. Williams, ABP (FAW) </li>
+<ul> 
+    <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
+    <li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
+    <li> Combustion Theory by F. A. Williams, ABP (FAW), 1985 </li>
     <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM) </li>
     <li> Combustion Physics by C. K. Law (CKL) </li>
+	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
+	<li> An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill </li> 
+	<li> Principles of Combustion by Kenneth Kuo, John Wiley </li>
     <li> Fuels and Combustion, Smith and Stinson, McGraw Hill, New York, 1952 </li>
     <li> Combustion and Gasification in Fluidized Beds, Taylor & Francis Group, LLC, 2006 </li>
-    <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
-	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
 </ul>
 </tr>
 </table>
