--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </table>
  -->
 
-<h2> <a href="project_writeup/MS_PhD_Winter_2018.html" target="_blank"> <center><i>Abstracts for topics floated for MS admissions (Winter 2018)</i></center></a></h2>
+<!-- <h2> <a href="project_writeup/MS_PhD_Winter_2018.html" target="_blank"> <center><i>Abstracts for topics floated for MS admissions (Winter 2018)</i></center></a></h2> -->
 <!--<h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>-->
 
 <h1><center> Research highlights </center></h1>
@@ -936,7 +936,8 @@ Write-up coming soon ...
 	<li> Automatic reaction mechanism generation
 	<!-- <li> <a href="project_writeup/Optimization_in_Combustion.html" target="_blank"> Optimization in Combustion </a> --> 
 		<!-- Mechanism optimization framework -->
-	<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> 
+	<!--<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> -->
+	<li> Bottom-up approach to kinetic modeling of larger hydrocarbons </a> 	
 	<li> Development of structure based compact reaction models
 	<li> Development of canonical kinetics solvers and post-processing tools
 	<li> Simulation driven surrogate formulation
