--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -69,7 +69,7 @@ Email: varuns@iitm.ac.in </li>
 <ul> <li> 9 credit elective course </li>
      <li> Open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li><br>
      <li> 3 lecture hours per week: E slot <br>
-		 <p><font color="lightgreen">Mondays 1-1:50 PM, Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM</font></p></li>
+		 <p><font color="lightgreen">Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM, Friday: 4:50-5:40 PM</font></p></li>
 	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
 	  <li> <p><font color="lightgreen">Venue: TDCE seminar hall</font></p></li>
       <li> Announcements via group mailing list</li>
