lecture hour change

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -83,8 +83,8 @@ Email: varuns@iitm.ac.in </li>
 	</ul>
 	
 	<h2> Pre-requisites: </h2>
-	<ul> <li> ME6060: Fundamentals of Combustion </li>
-    	 <li> Consent of Teacher is required if no prior coursework on combustion has been done. </li>
+	<ul> <li> ME6060: Fundamentals of Combustion (or) ME5105: Applied thermodynamics </li>
+		 <li> Consent of Teacher is required if no prior coursework on these topics has been done. </li>
 	</ul>
 
 	<h2> Grading policy: </h2>
