adding de goey reference

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -123,8 +123,8 @@ Email: varuns@iitm.ac.in </li>
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
-	<col width = "73%">
-	<col width = "27%">	
+	<col width = "65%">
+	<col width = "35%">	
 	<tr> <th> <h2> Course outline</h2>
 		 <th> <h2> Reading </h2>
 	</tr> 
@@ -133,11 +133,11 @@ Email: varuns@iitm.ac.in </li>
 <h3>Module 1: Premixed flames, with bunsen burner as an example</h3>
 
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "73%">
-	<col width = "27%">	
+	<col width = "65%">
+	<col width = "35%">	
    <tr> 
 	<td> Notion of flame speed, global energy balance to derive relations between flame speed, thermochemistry and kinetics </td>
-	<td> FAW $5.1.2</td> </tr>
+	<td> FAW $5.1.2, <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
 	<td> CKL $7.7 </td></tr>
@@ -157,8 +157,8 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Module 2: Non-premixed flames, with counterflow diffusion flame as an example </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "73%">
-	<col width = "27%">	
+	<col width = "65%">
+	<col width = "35%">	
    <tr> 
 	<td> Using opp-diff burner as example, introduce counterflow non-premixed flames. </td>
 	<td> </td> </tr>
@@ -178,8 +178,8 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Module 3: Burners for gaseous fuels </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "73%">
-	<col width = "27%">	
+	<col width = "65%">
+	<col width = "35%">	
    <tr> 
 	<td> Domestic LPG stove burner - design concepts </td>
 	<td> </td> </tr>
@@ -194,8 +194,8 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Module 4: Spray combustion and applications</h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "73%">
-	<col width = "27%">	
+	<col width = "65%">
+	<col width = "35%">	
    <tr> 
 	<td> Basics of atomization and types of injectors</td>
 	<td> </td> </tr>
@@ -216,8 +216,8 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Module 5: Solid fuel combustion </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "73%">
-	<col width = "27%">	
+	<col width = "65%">
+	<col width = "35%">	
    <tr> 
 	<td> Single particle combustion theory for coal and biomass</td>
 	<td> </td> </tr>
