--- a/logger/logger.html
+++ b/logger/logger.html
@@ -20,7 +20,7 @@ table, th, td {
     border: 1px solid black;
 }
 </style>
-<!-- <script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -29,7 +29,6 @@ table, th, td {
   ga('create', 'UA-62002830-1', 'auto');
   ga('send', 'pageview');
 </script>
--->
 </head>
 
 <body bgcolor = "black">
@@ -50,7 +49,7 @@ Events:
 <!--
 Lessons:
 <ul>
-<li><a href="https://www.dropbox.com/s/mllxhg6ebg7drlw/Paricaya_Lesson6.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive</a>
+<li><a href="https://www.dropbox.com/s/vsg8s9pzj2ywvgw/Paricaya_Lesson6_PastPassive.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive</a>
 </ul>
 -->
 
