--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -137,7 +137,7 @@ Email: varuns@iitm.ac.in </li>
 	<col width = "35%">	
    <tr> 
 	<td> Notion of flame speed, global energy balance to derive relations between flame speed, thermochemistry and kinetics </td>
-	<td> FAW $5.1.2, <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
+	<td> CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
 	<td> CKL $7.7 </td></tr>
