--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -140,7 +140,7 @@ Email: varuns@iitm.ac.in </li>
 	<td> CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
-	<td> CKL $7.7 </td></tr>
+	<td> CKL $1.4.6, CKL $7.7 </td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
 	<td> CKL $5.1/TP $2.3 </td></tr>
