tutorial1: SL expressions

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -130,7 +130,7 @@ Email: varuns@iitm.ac.in </li>
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example</h3>
+<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=lyIOa7Wfcv0Vra0" target="_blank">Tutorial</a></h3>
 
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
