--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 	<h4>Praise Noah Johnson</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. He is presently pursuing his Masters at IIT Madras. His research work centers on kinetics of alternative fuels, particularly relevant to aviation. 
+Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. He is presently pursuing his Masters at IIT Madras. His research work centers on kinetics of unsaturated ester content in biodiesel fuel. 
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
@@ -436,10 +436,8 @@ Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering Coll
 
 
 <ul>
-<li> <h3>Surrogates for liquid phase applications:</h3> 
-Surrogate mixtures are often used to emulate gas phase combustion characteristics of real fuels, such as heating value, sooting characteristics, and propensity to ignition. These cannot be used as such in liquid phase applications, where multi-phase processes, such as spray injection, are important. Typically, for these applications, surrogates are proposed by matching targets such as density, viscosity, and distillation curves between the real fuel and the surrogate. However, these targets do not pertain to a combustion environment. One attractive option to include evaporation and phase equilibrium dynamics in the surrogate definition is to study the combustion characteristics of an isolated droplet. This project involves simulating the burning process of isolated fuel droplets at low gravity for neat fuel components as well as mixtures of hydrocarbons relevant as transportation fuel surrogates. Evaporation rates of fuels in this simple configuration may be useful quantities to describe the multi-phase effects in a combusting environment. <br> </br>
-
-In this project, numerical solution procedure to predict the droplet burning accounting for the interface conditions will be developed. Techniques to obtain solutions with reduced computational time will be explored. The validity of the model will be ascertained based on the vast data available in the literature. Thereafter, evaporation rate rules will be developed for the surrogate mixture in terms of the components, and investigated if it is indeed an appropriate measure or if other additional parameters may be needed to come up with a good surrogate valid for liquid-phase applications.
+<li> <h3>Data driven prediction of ignition delays:</h3> 
+Ignition delay has an important role in combustion. Ignition delay is affected by different parameters such as temperature, pressure, Equivalence ratio, etc. The objective is to predict ignition delays of fuels based on the molecular structure and the aforementioned parameters.
 </br>
 
 	
@@ -473,7 +471,26 @@ Krunal obtained his B.E. in Mechanical Engineering from Government Engineering C
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
+</td>
+</tr>
+<tr>
+<td>
 
+<ul>
+<li> <h3>Methods for mechanism reduction:</h3> 
+Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. The state-of-the-art graph based reduction methods will be implemented to begin with. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
+
+</br>	
+	<td width="15%">
+	<center><img src="./images/Kedar.jpg" width="150">	
+	</br>
+	<h4>Krunal Rajeshkumar Panchal</h4>
+	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+Kedar obtained his B.E. in Mechanical Engineering from PVG's College of Engineering and Technology, Pune  in 2017. He is presently pursuing his Masters at IIT Madras. His research topic focuses on developing open source tools to generate compact kinetic models.
+</p></br>
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</ul>
 
 </td>
 </tr>
