adding kedar to team

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ Reaction mechanisms that describe the oxidation of a fuel are huge with several 
 	<td width="15%">
 	<center><img src="./images/Kedar.jpg" width="150">	
 	</br>
-	<h4>Krunal Rajeshkumar Panchal</h4>
+	<h4>Page Kedar Govind/h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Kedar obtained his B.E. in Mechanical Engineering from PVG's College of Engineering and Technology, Pune  in 2017. He is presently pursuing his Masters at IIT Madras. His research topic focuses on developing open source tools to generate compact kinetic models.
