adding reading for low Mach number

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -143,7 +143,7 @@ Email: varuns@iitm.ac.in </li>
 	<td> CKL $1.4.6, CKL $7.7 </td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
-	<td> CKL $5.1/TP $2.3 </td></tr>
+	<td> General derivation: CKL $5.1/TP $2.3, Low Mach number assumption: CKL $5.2.4.3 </td></tr>
 	
 	<tr> <td> Flame speed calculations using FlameMaster </td>
 	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=ju2N6Pgpfy2VyLv" target="_blank">PREMIX documentation</a> </td></tr>
