adding reading for low Mach number

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -137,13 +137,13 @@ Email: varuns@iitm.ac.in </li>
 	<col width = "35%">	
    <tr> 
 	<td> Notion of flame speed, global energy balance to derive relations between flame speed, thermochemistry and kinetics </td>
-	<td> CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
+	<td> CKL $7.6.1, CKL $7.6.2, FAW $5.1.2, <br> <a href="https://www.tandfonline.com/doi/abs/10.1080/00102209308907668" target="_blank">Measurement of adiabatic flame speeds</a></td> </tr>
 	
 	<tr> <td> Dependence of SL on various parameters </td>
 	<td> CKL $1.4.6, CKL $7.7 </td></tr>
 	
 	<tr> <td> 1D conservation laws for steady laminar premixed flames  </td>
-	<td> General derivation: CKL $5.1/TP $2.3, Low Mach number assumption: CKL $5.2.4.3 </td></tr>
+	<td> General derivation: CKL $5.1/TP $2.3, <br> Low Mach number assumption: CKL $5.2.4.3 </td></tr>
 	
 	<tr> <td> Flame speed calculations using FlameMaster </td>
 	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=ju2N6Pgpfy2VyLv" target="_blank">PREMIX documentation</a> </td></tr>
