add vaisakh to alumni

--- a/index.html
+++ b/index.html
@@ -615,9 +615,14 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 <td>
 <ul>	
 <li> <h3>Reaction mechanism optimization:</h3>
-In this study, a framework for reaction mechanism optimization is developed and the idea has been implemented as a black box tool. This tool requires target information and uncertainty of rate constants as inputs. This modular Python script uses FlameMaster (Pitsch, H. FlameMaster v3.3.10) for kinetics simulations and NLopt for minimization of objective function. Numerical simulations are decoupled from the optimization by a response surface that approximates the target values as algebraic functions of normalized reaction rate constants. As opposed to the factorial design approach, a sensitivity based method adopted here (Davis et al. 2004). It generates a response surface with fewer computations, but with comparable accuracy. Finally, the minimization is carried out on an objective function indicative of the error between calculated and observed target values. To demonstrate the applicability of this tool, a reaction mechanism for n-heptane is considered.
+ <center><img src="./current_research/optimization_vaisakh/framework.jpg"  style="float: right; width: 44%; margin-left: 2%; margin-bottom: 0.5em;"> </center> 
+In this study, a framework for reaction mechanism optimization is developed and the idea has been implemented as a black box tool. This tool requires target information and uncertainty of rate constants as inputs. This modular Python script uses FlameMaster (Pitsch, H. FlameMaster v3.3.10) for kinetics simulations and NLopt for minimization of objective function. 
+<br><br>
+Numerical simulations are decoupled from the optimization by a response surface that approximates the target values as algebraic functions of normalized reaction rate constants. As opposed to the factorial design approach, a sensitivity based method adopted here (Davis et al. 2004). It generates a response surface with fewer computations, but with comparable accuracy. Finally, the minimization is carried out on an objective function indicative of the error between calculated and observed target values. To demonstrate the applicability of this tool, a reaction mechanism for n-heptane is considered.
 <br><br>
 Scope of performing optimization in multiple stages utilizing the underlying kinetic knowledge is also explored. The optimization tool developed as a part of this work is made available on <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">github</a> in a black-box fashion for the use of the combustion community.
+ <center><img src="./current_research/optimization_vaisakh/result_opt.png" style="float: center; width: 44%; margin-right: 1%; margin-bottom: 0.5em;">
+ <img src="./current_research/optimization_vaisakh/features.jpg"   style="float: center; width: 48%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
 
 <td width="25%">
 <center><img src="./images/Vaisakh.jpg" width="170">	
@@ -627,6 +632,7 @@ Scope of performing optimization in multiple stages utilizing the underlying kin
 </center>
 Vaisakh obtained his B. Tech in Mechanical Engineering from NSS College of Engineering Palakkad in 2014. He received his M. Tech in Thermal Engineering at IIT Madras in 2017. His project focused on reaction mechanism optimization. He is currently working as a postgraduate engineer at <a href="https://www.linkedin.com/company/lennox_india_technology_centre?trk=ppro_cprof" target="_blank">Lennox India Technology Centre</a>, Chennai.</p></br>
 <!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+
 </td>
 
 </td>
