--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -73,6 +73,7 @@ Email: varuns@iitm.ac.in </li>
 	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
 	  <li> <p><font color="lightgreen">Venue: TDCE seminar hall</font></p></li>
       <li> Announcements via group mailing list</li>
+      <li> <p><font color="red">Attendance norm: 85%. You will NOT be allowed to take the exams if the attendance requirement is not met.</font></p></li>
 </ul>
 </td>
 
