--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -121,6 +121,11 @@ Email: varuns@iitm.ac.in </li>
 </tr>
 </table>
 
+<p> <font color="yellow">
+News:<br>
+26/1: Tutorial on premixed flames is updated; Reading exercise for premixed flame computations is added
+</font>
+</p>
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
@@ -130,6 +135,7 @@ Email: varuns@iitm.ac.in </li>
 		 <th> <h2> Reading </h2>
 	</tr> 
 </table><br>
+
 
 <h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=lyIOa7Wfcv0Vra0" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/kQeLROs54Biyg0j" target="_blank">Reading Exercise</a></h3>
 
