--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -121,10 +121,10 @@ Email: varuns@iitm.ac.in </li>
 </tr>
 </table>
 
-<p> <font color="yellow">
-News:<br>
-26/1: Tutorial on premixed flames is updated; Reading exercise for premixed flame computations is added
-</font>
+<br>
+<p> <font color="yellow"><b>
+Updates/Announcements:</b></font><br>
+26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.<br>
 </p>
 
 <br><br>
