--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -126,6 +126,16 @@ Email: varuns@iitm.ac.in </li>
 Updates/Announcements:</b></font><br>
 26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.<br>
 </p>
+<br>
+
+<p> <font color="yellow"><b>
+Computing exercises:</b></font></p>	
+<ul>
+	<li> Request to download FlameMaster <a href="https://www.itv.rwth-aachen.de/index.php?id=flamemaster" target="_blank">here</a></li>
+	<li> Follow the installation instructions depending on your operating system (TAs can help you with this). Some systems available in TDCE 115 have FlameMaster pre-installed on them. Once again TAs can help you locate them. </li>
+	<li>Check out the example for 1D unstretched flame within the Run directory:
+Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>	
+</ul>
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
