--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -124,7 +124,10 @@ Email: varuns@iitm.ac.in </li>
 <br>
 <p> <font color="yellow"><b>
 Updates/Announcements:</b></font><br>
-26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.<br>
+<ul>
+	<li> 26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.</li>
+</ul>
+<br>
 </p>
 <br>
 
