--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -22,13 +22,26 @@ table, th, td {
 
 <body bgcolor = "black">
 
-<center><h2>Group Pictures</h2>
+<center><h2>Group Pictures</h2>	
+Our team as of May 2018 <br>
+	<img src="../images/Group_Pic_April_2018.jpg" width="750">
+
+<!--
+	<br><br><br>
+BioFCFD - Kickoff: March 2018	<br>
+	<img src="../images/Group_Pic_Kickoff_March_2018.jpg" width="750">
+-->
+	
+<br><br><br>
 Our team as of May 2017	<br>
 	<img src="../images/Group_Pic_May_2017.jpg" width="750">
 
-
+<!-- 
 <br><br><br>
-Our team as of May 2018 <br>
-	<img src="../images/Group_Pic_April_2018.jpg" width="750">
+Participants of IDMCKAA: December 2016 <br>
+	<img src="../images/Group_Pic_IDMCKAA_2016.jpg" width="750">
+-->
 </center>
+
+
 </body></html>
