--- a/project_writeup/MS_PhD_Winter_2018.html
+++ b/project_writeup/MS_PhD_Winter_2018.html
@@ -15,7 +15,7 @@ h2   {color: pink;}
 h3   {color: lightblue;}
 h4   {color: lightblue;}
 </style>
-<script>
+<!--<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -24,6 +24,7 @@ h4   {color: lightblue;}
   ga('create', 'UA-62002830-1', 'auto');
   ga('send', 'pageview');
 </script>
+-->
 </head>
 
 <center><h2> Topic for MS programme</h2></center>
