clarify available projects

--- a/index.html
+++ b/index.html
@@ -966,13 +966,13 @@ These problems suit a 2 year Masters program, unless stated otherwise. Please ch
 	<!-- Development of kinetic model for Fischer-Tropsch fuels -->
 	<!-- <li> <a href="project_writeup/Biodiesel_Combustion.html" target="_blank"> Biodiesel Combustion </a> -->
 	<!--Analysis of the importance of unsaturated ester representatives in biodiesel surrogates -->
-	<li> Automatic reaction mechanism generation
+	<li> Automatic reaction mechanism generation (1 year: M. Tech project)
 	<!-- <li> <a href="project_writeup/Optimization_in_Combustion.html" target="_blank"> Optimization in Combustion </a> --> 
 	<!-- Mechanism optimization framework -->
 	<!--<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> -->
 	<li> Bottom-up approach to kinetic modeling of larger hydrocarbons </a> 	
 	<li> Development of structure based compact reaction models
-	<li> Development of canonical kinetics solvers and post-processing tools
+	<!-- <li> Development of canonical kinetics solvers and post-processing tools (1 year: M. Tech project) -->
 	<li> Simulation driven surrogate formulation
 <!--	<li> <a href="project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html" target="_blank">Surrogate for liquid-phase applications</a> -->
 	<li> Thermodynamic property estimation for cyclic species (1 year: M.Tech project)
