--- a/index.html
+++ b/index.html
@@ -960,22 +960,29 @@ All mechanism are made available and have been validated as discussed in the jou
 <td>
 
 <!-- <a id="Available_research_projects"> Write-up coming soon ... </a> -->
-These problems suit a 2 year Masters program, unless stated otherwise. Please check my home page to see if I am looking to admit students this cycle.
+Problems that suit a 2 year Masters program ... Please check my home page to see if I am looking to admit students this cycle.
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html" target="_blank"> Alternative Fuel Combustion </a>
 	<!-- Development of kinetic model for Fischer-Tropsch fuels -->
 	<!-- <li> <a href="project_writeup/Biodiesel_Combustion.html" target="_blank"> Biodiesel Combustion </a> -->
 	<!--Analysis of the importance of unsaturated ester representatives in biodiesel surrogates -->
-	<li> Automatic reaction mechanism generation (1 year: M. Tech project)
 	<!-- <li> <a href="project_writeup/Optimization_in_Combustion.html" target="_blank"> Optimization in Combustion </a> --> 
 	<!-- Mechanism optimization framework -->
 	<!--<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> -->
-	<li> Bottom-up approach to kinetic modeling of larger hydrocarbons </a> 	
+	<li> Bottom-up approach to kinetic modeling of larger hydrocarbons
 	<li> Development of structure based compact reaction models
 	<!-- <li> Development of canonical kinetics solvers and post-processing tools (1 year: M. Tech project) -->
 	<li> Simulation driven surrogate formulation
 <!--	<li> <a href="project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html" target="_blank">Surrogate for liquid-phase applications</a> -->
-	<li> Thermodynamic property estimation for cyclic species (1 year: M.Tech project)
+</ul>
+</td>
+</tr>
+
+<tr><td>
+Problems that suit a M. Tech project ... Please check my home page to see if I am looking to admit students this cycle.
+<ul>
+	<li> Automatic reaction mechanism generation
+	<li> Thermodynamic property estimation for cyclic species
 </ul>
 
 </td>
