clarify available projects

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <td>
 
 <!-- <a id="Available_research_projects"> Write-up coming soon ... </a> -->
-Problems that suit a 2 year Masters program ... Please check my home page to see if I am looking to admit students this cycle.
+Problems that suit a Masters thesis ... Please check my home page to see if I am looking to admit students this cycle.
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html" target="_blank"> Alternative Fuel Combustion </a>
 	<!-- Development of kinetic model for Fischer-Tropsch fuels -->
