clarify available projects

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <td>
 
 <!-- <a id="Available_research_projects"> Write-up coming soon ... </a> -->
-Problems that suit a Masters thesis ... Please check my home page to see if I am looking to admit students this cycle.
+For a Masters thesis*
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html" target="_blank"> Alternative Fuel Combustion </a>
 	<!-- Development of kinetic model for Fischer-Tropsch fuels -->
@@ -979,7 +979,7 @@ Problems that suit a Masters thesis ... Please check my home page to see if I am
 </tr>
 
 <tr><td>
-Problems that suit a M. Tech project ... Please check my home page to see if I am looking to admit students this cycle.
+For an M. Tech project*
 <ul>
 	<li> Automatic reaction mechanism generation
 	<li> Thermodynamic property estimation for cyclic species
@@ -988,6 +988,8 @@ Problems that suit a M. Tech project ... Please check my home page to see if I a
 </td>
 </tr>
 </table>
+
+*<i>Please check my home page to see if I am looking to admit students this cycle.</i>
 
 <!-- <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>M. Tech/DD projects</i></center></a></h2>
