--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ For an M. Tech project*
 </tr>
 </table>
 
-*<i>Please check my home page to see if I am looking to admit students this cycle.</i>
+*<i>Please check my home page to find out if I am seeking students this cycle.</i>
 
 <!-- <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>M. Tech/DD projects</i></center></a></h2>
