--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -121,21 +121,59 @@ Email: varuns@iitm.ac.in </li>
 </table>
 
 <br>
-<p> <font color="yellow"><b>
-Updates/Announcements:</b></font><br>
+<h3> <font color="pink">
+Updates/Announcements:</font></h3>
 <ul>
 	<li> 26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.</li>
+	<li> 28/1: Demo and tutorial schedule (tentative) added
 </ul>
 </p>
 
-<p> <font color="yellow"><b>
-Computing exercises:</b></font></p>	
+<h3>
+Computing exercises:</h3>
 <ul>
 	<li> Request to download FlameMaster <a href="https://www.itv.rwth-aachen.de/index.php?id=flamemaster" target="_blank">here</a></li>
 	<li> Follow the installation instructions depending on your operating system (TAs can help you with this). Some systems available in TDCE 115 have FlameMaster pre-installed on them. Once again TAs can help you locate them. </li>
 	<li>Check out the example for 1D unstretched flame within the Run directory:
 Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>	
 </ul>
+
+<h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font>:</h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "65%">
+	<col width = "35%">		
+	<tr> <td> <font color="greenyellow">Premixed flames: bunsen burner, flat flame burner </font></td>
+	<td> February 7th</td></tr>
+
+	<tr> <td> <font color="khaki">Premixed flames</font> </td>
+	<td> February 14th</td></tr>
+	
+	<tr> <td> <font color="greenyellow">Non-Premixed flames: Opposed flow burner (in-class video), Tsuji burner</font></td>
+	<td> February 21st</td></tr>
+
+	<tr> <td> <font color="khaki">Non-Premixed flames</font> </td>
+	<td> February 28th</td></tr>
+	
+	<tr> <td> <font color="greenyellow">Gaseous fuel burners: LPG stove burner, MILD combustor</font></td>
+	<td> March 14th</td></tr>
+
+	<tr> <td> <font color="khaki">Gaseous fuel burners</font></td>
+	<td> March 21st</td></tr>
+
+	<tr> <td> <font color="greenyellow">Spray combustion: TBD</font></td>
+	<td> March 28th</td></tr>
+
+	<tr> <td> <font color="khaki">Spray combustion</font></td>
+	<td> April 4th</td></tr>
+	
+	<tr> <td> <font color="greenyellow">Solid fuel combustion: Coal gasifier, MILD inspired burner for biomass</font></td>
+	<td> April 18th</td></tr>
+
+	<tr> <td> <font color="khaki">Solid fuel combustion</font></td>
+	<td> April 25th</td></tr>	
+
+</table><br>
+
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
